trying to fix background img pixilation on mobile

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -65,6 +65,7 @@ body
   background-position: center
 
 .bike-background-img
+  width: 100%
   background-size: cover
   background-attachment: fixed
   // background-repeat: no-repeat
@@ -88,8 +89,6 @@ body
   @media screen and (min-width: 992px)
     padding-top: 25px
     width: 50px
-
-
 
 .social-icon-one
   position: relative
